@@ -284,6 +284,7 @@ public:
 		Point listbox_text_margin;
 		int horizontal_list_text_width;
 		Color scrollbar_bg_color;
+		int log_padding;
 	};
 
 	class XPTable {
