@@ -41,6 +41,7 @@ Engine features:
 * Support using gamepad during initial launch menus.
 * Added prompt for language on first launch.
 * Added 'show_permadeath' option to menus/gamenew.txt config.
+* Added 'log.padding' property to engine/widget_settings.txt config.
 * Android: Enabled use of external input devices (gamepads, keyboards, mice)
 
 Engine fixes:
